# shaperglot

.github/workflows/: rust.yml
shaperglot-cli/: Cargo.toml
