[package]
name = "shaperglot-cli"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The Shaperglot Authors"]
description = "Test font files for OpenType language support"
homepage = "https://github.com/googlefonts/shaperglot"
repository = "https://github.com/googlefonts/shaperglot"

[[bin]]
path = "src/main.rs"
name = "shaperglot"

[dependencies]
shaperglot = { version = "1.2.0", path = "../shaperglot-lib", features = [
    "colored"
] }
skrifa = { workspace = true }
itertools = { workspace = true }
clap = { version = "4.5.43", features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
